fix: make image fully visible

--- a/app/styles.css
+++ b/app/styles.css
@@ -352,8 +352,16 @@ section .content {
   background-color: rgba(var(--c-primary-rgb), 0.9);
   position: relative;
   border-radius: 5px;
-  overflow: hidden;
+  /* overflow: hidden; */
   display: flex;
+}
+
+.project1 {
+  padding: 25px 25px 20px 25px;
+  width: 100%;
+  background-color: rgba(var(--c-primary-rgb), 0.9);
+  position: relative;
+  border-radius: 5px;
 }
 
 .project-right {
@@ -361,6 +369,14 @@ section .content {
 }
 
 .project__content {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  justify-content: center;
+  pointer-events: none;
+}
+
+.project__content1 {
   display: flex;
   flex-direction: column;
   gap: 30px;
@@ -481,7 +497,17 @@ section .content {
   z-index: -100;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
+}
+
+.project__image-container1 {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: -100;
+  width: 100%;
+  height: 100%;
+  /* overflow: hidden; */
 }
 
 .project__image-container-left {
@@ -517,10 +543,33 @@ section .content {
     border-radius: 0;
   }
 
+  .project1 {
+    background-color: inherit;
+    padding: 0;
+    border-radius: 0;
+    display: flex;
+  }
+
   .project__content {
     width: clamp(370px, 65%, 495px);
     position: relative;
     z-index: 2;
+  }
+
+  .project__content1 {
+    width: clamp(370px, 65%, 495px);
+    position: relative;
+    z-index: 2;
+    flex-shrink: 0;
+    flex-grow: 0;
+  }
+
+  .project__header {
+    width: fit-content;
+  }
+
+  .project__footer {
+    width: fit-content;
   }
 
   .project__description {
@@ -531,13 +580,32 @@ section .content {
   .project__image-container {
     width: clamp(330px, 46vw, 570px);
     height: clamp(220px, 30.6vw, 380px);
-    top: 13%;
-    filter: grayscale(100%) contrast(1) sepia() saturate(2) hue-rotate(138deg);
+    /* top: 13%; */
+    filter: grayscale(100%) contrast(1) brightness(0.7) sepia() saturate(2)
+      hue-rotate(138deg);
     z-index: 1;
     transition: filter 0.5s;
   }
 
+  .project__image-container1 {
+    width: clamp(330px, 46vw, 570px);
+    height: clamp(220px, 30.6vw, 380px);
+    filter: grayscale(100%) contrast(1) brightness(0.7) sepia() saturate(2)
+      hue-rotate(138deg);
+    z-index: 1;
+    transition: filter 0.5s;
+    position: static;
+    margin-left: -9%;
+    flex-shrink: 0;
+    flex-grow: 0;
+    pointer-events: initial;
+  }
+
   .project__image-container:hover {
+    filter: none;
+  }
+
+  .project__image-container1:hover {
     filter: none;
   }
 
